--- a/Week1/index.html
+++ b/Week1/index.html
@@ -8,6 +8,12 @@
 	<link rel="stylesheet" href="css/style.css">
 
 </head>
+
+<!-- leaflet -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+
+
 <body>
 
 	<div class="header">
@@ -16,9 +22,11 @@
 	<div class="sidebar">
 		My Sidebar
 	</div>
-	<div class="content">
-		My Map
-	</div>
+	<div id="map"></div>
+
+
+
+
 
 </body>
 </html>
