--- a/Week4/index.html
+++ b/Week4/index.html
@@ -23,7 +23,7 @@
 		Robin Dunitz Slides of Los Angeles Murals, 1925-2002
 	</div>
 	<div class="sidebar">
-		
+		<p>hello</p>
 	</div>
 	<div class="content">
 		<div id="map"></div>
