--- a/Week4/index.html
+++ b/Week4/index.html
@@ -18,10 +18,10 @@
 <body>
 
 	<div class="header">
-		Robin Dunitz Slides of Los Angeles Murals, 1925-2002
+		BTS Tours 
 	</div>
 	<div class="sidebar">
-		
+		<p>The following shows the Tour desentations of BTS's first tour - The Red Bullet Tour in 2014 - & the tour destinations for what would've been their most recent tour - Map of the Soul Tour in 2020</p>
 	</div>
 	<div class="content">
 		<div id="map"></div>
