--- a/Week4/index.html
+++ b/Week4/index.html
@@ -18,7 +18,7 @@
 <body>
 
 	<div class="header">
-		BTS Tours 
+		BTS Tours - update
 	</div>
 	<div class="sidebar">
 		<p>The following shows the Tour desentations of BTS's first tour - The Red Bullet Tour in 2014 - & the tour destinations for what would've been their most recent tour - Map of the Soul Tour in 2020</p>
