--- a/Week4/index.html
+++ b/Week4/index.html
@@ -27,7 +27,7 @@
 		<div id="map"></div>
 	</div>
 	<div class="footer">
-		Source: <a href="http://digitallibrary.usc.edu/cdm/landingpage/collection/p15799coll15">USC Libraries</a>
+		hello: <a href="http://digitallibrary.usc.edu/cdm/landingpage/collection/p15799coll15">USC Libraries</a>
 	</div>
 
 	<script src="js/map.js"></script>
