--- a/Week4/index.html
+++ b/Week4/index.html
@@ -27,7 +27,7 @@
 		<div id="map"></div>
 	</div>
 	<div class="footer">
-		hello: <a href="http://digitallibrary.usc.edu/cdm/landingpage/collection/p15799coll15">USC Libraries</a>
+		Source: <a href="https://en.wikipedia.org/wiki/List_of_BTS_live_performances#Tours">BTS Tours</a>
 	</div>
 
 	<script src="js/map.js"></script>
