--- a/Week4/index.html
+++ b/Week4/index.html
@@ -21,7 +21,7 @@
 		BTS Tours 
 	</div>
 	<div class="sidebar">
-		<p>The following shows the Tour desentations of BTS's first tour - The Red Bullet Tour in 2014 - & the tour destinations for what would've been their most recent tour - Map of the Soul Tour in 2020</p>
+		<p>The following shows the Tour desentations of BTS's first tour <i>The Red Bullet Tour</i> in 2014 vs what would've been their most recent tour <i>Map of the Soul Tour</i> in 2020</p>
 	</div>
 	<div class="content">
 		<div id="map"></div>
