--- a/Week4/index.html
+++ b/Week4/index.html
@@ -18,7 +18,7 @@
 <body>
 
 	<div class="header">
-		BTS Tours 
+		BTS Tours <img src="images/btslogo.png" width="150px">
 	</div>
 	<div class="sidebar">
 		<p>The following shows the Tour desentations of BTS's first tour <i>The Red Bullet Tour</i> in 2014 vs what would've been their most recent tour <i>Map of the Soul Tour</i> in 2020</p>
