--- a/Week4/index.html
+++ b/Week4/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>World</title>
+	<title>BTS Tours</title>
 	<meta charset="utf-8" />
 
 	<!-- style sheets -->
