--- a/Week4/index.html
+++ b/Week4/index.html
@@ -18,14 +18,25 @@
 <body>
 
 	<div class="header">
-		BTS Tours <img src="images/btslogo.png" width="150px">
+		BTS Tours <img src="images/btslogo.png" width="25px" padding-down ="50px">
 	</div>
 	<div class="sidebar">
-		<p>The following shows the Tour desentations of BTS's first tour <i>The Red Bullet Tour</i> in 2014 vs what would've been their most recent tour <i>Map of the Soul Tour</i> in 2020</p>
+		<p>The following shows the Tour desentations of BTS's first tour <i>The Red Bullet Tour</i> in 2014 vs what would've been their most recent tour <i>Map of the Soul Tour</i> in 2020</p> <br>
+
+		
+		<div class="sidebar-text">
+		<h3>Concert Shows by Continent</h3><br>
+		 <div class="sidebar-box" onclick="flyToIndex(36.7783,-119.4179)">Asia</div>
+			<div class="sidebar-box" onclick="flyToIndex(43.651070,-79.347015)">North America</div>
+			<div class="sidebar-box" onclick="flyToIndex(51.509865,-0.118092)">Europe</div>
+			<div class="sidebar-box" onclick="flyToIndex(48.864716,2.349014)">Australia</div>
+			<div class="sidebar-box" onclick="flyToIndex(52.520008,13.404954)">South America</div>
+	</div>
 	</div>
 	<div class="content">
 		<div id="map"></div>
 	</div>
+
 	<div class="footer">
 		Source: <a href="https://en.wikipedia.org/wiki/List_of_BTS_live_performances#Tours">BTS Tours</a>
 	</div>
