--- a/Week4/index.html
+++ b/Week4/index.html
@@ -26,11 +26,11 @@
 		
 		<div class="sidebar-text">
 		<h3>Concert Shows by Continent</h3><br>
-		 <div class="sidebar-box" onclick="flyToIndex(36.7783,-119.4179)">Asia</div>
-			<div class="sidebar-box" onclick="flyToIndex(43.651070,-79.347015)">North America</div>
-			<div class="sidebar-box" onclick="flyToIndex(51.509865,-0.118092)">Europe</div>
-			<div class="sidebar-box" onclick="flyToIndex(48.864716,2.349014)">Australia</div>
-			<div class="sidebar-box" onclick="flyToIndex(52.520008,13.404954)">South America</div>
+		 <div class="sidebar-box" onclick="flyToIndex(34.0479, 100.6197)">Asia</div>
+			<div class="sidebar-box" onclick="flyToIndex(54.5260,-105.2551)">North America</div>
+			<div class="sidebar-box" onclick="flyToIndex(54.5260,15.2551)">Europe</div>
+			<div class="sidebar-box" onclick="flyToIndex(-25.2744,133.7751)">Australia</div>
+			<div class="sidebar-box" onclick="flyToIndex(8.7832,-55.4915)">South America</div>
 	</div>
 	</div>
 	<div class="content">
