--- a/Week4/index.html
+++ b/Week4/index.html
@@ -21,11 +21,22 @@
 		BTS Tours <img src="images/btslogo.png" width="25px" padding-down ="50px">
 	</div>
 	<div class="sidebar">
-		<p>The following shows the Tour desentations of BTS's first tour <i>The Red Bullet Tour</i> in 2014 vs what would've been their most recent tour <i>Map of the Soul Tour</i> in 2020</p> <br>
+		<div class = "intro">
+			<h2>BTS (방탄소년단)</h2>
+			<b>or BulletProof Boyscouts in English, have undoubtedly made their mark in the music industry. With their rapid global expansion, with the support of their devoted fandom (ARMY), and their continual success, they are on their way to becoming one of the most decorated artists in history. 
+
+			</b> 
+			
+		</div>
+	
+		
+		<p>
+			Their global expansion can be visualized through their tours over the years.
+			The following shows the Tour desentations of BTS's first tour <i>The Red Bullet Tour</i> in 2014 vs what would've been their most recent tour <i>Map of the Soul Tour</i> in 2020</p> <br>
 
 		
 		<div class="sidebar-text">
-		<h3>Concert Shows by Continent</h3><br>
+		<h3>Concert Shows by Continent</h3>
 		 <div class="sidebar-box" onclick="flyToIndex(34.0479, 100.6197)">Asia</div>
 			<div class="sidebar-box" onclick="flyToIndex(54.5260,-105.2551)">North America</div>
 			<div class="sidebar-box" onclick="flyToIndex(54.5260,15.2551)">Europe</div>
